FEAT: Final Deployment

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
     --void: #000000;
     --stardust: #FFFFFF1A;
     --accent: #FF4D4D;
+    --main-color: #F1C40F;
     --text: rgba(255, 255, 255, 0.9);
     --transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -32,13 +33,13 @@ body {
     font-weight: 700;
     font-size: 1.8rem;
     color: white;
+    margin-left: 50px;
 }
 
 .container {
     max-width: 1200px;
     min-height: calc(100vh - 320.77px);
-    margin: 236.56px auto;
-    /* margin: 0 auto; */
+    margin: 176.56px auto;
     padding: 0 20px;
     align-items: center;
     justify-content: center;
@@ -49,10 +50,9 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 15px 20px;
+    padding: 15px 10px;
     color: white;
     z-index: 1000;
-    width: 100%;
     justify-content: space-between;
     color: white;
     background-color: #151515;
@@ -115,14 +115,14 @@ body {
     border-radius: 10px;
     padding: 20px;
     box-shadow: rgba(255, 255, 255, 0.512) 0px 0px 15px;
-    margin: 95px auto;
+    margin: 75px auto;
     width: 100%;
     max-width: 600px;
-    height: 550px;
+    height: 580px;
 }
 ::placeholder {
     color: var(--text);
-    opacity: 0.8;
+    opacity: 0.9;
 }
 .todo_box #todo_form input{
     background-color: var(--stardust);
@@ -135,7 +135,6 @@ body {
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 .todo_box #todo_form select{
     background-color: var(--stardust);
@@ -148,7 +147,9 @@ body {
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.todo_box #todo_form option{
+    color: var(--void)
 }
 .todo_box #todo_form button{
     background-color: var(--stardust);
@@ -160,7 +161,6 @@ body {
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 .footer_container {
     color: #fff;
@@ -222,8 +222,47 @@ body {
 .light-mode .todo_box #todo_form button{
     background-color: var(--navbar);
 }
+.light-mode .todo_box #todo_form option{
+    color: var(--text)
+}
+.light-mode .dashboard {
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    background-color: #ffffff;
+}
+.light-mode .dashboard .calendar-widget{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    background-color: var(--void);
+}
+.light-mode .dashboard #search-input{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    background-color: var(--void);
+}
+.light-mode .dashboard .counter-box{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.light-mode .dashboard .recap-card{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.light-mode .dashboard #resetButton{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.light-mode .dashboard .weather_widget{
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
 
-
+.light-mode .dashboard .div3 {
+    color: var(--void)
+}
+.light-mode .card {
+    background-color: var(--text);
+    box-shadow: rgba(1, 2, 5, 0.25) 0px 0px 8px 8px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.light-mode .container h2 {
+    color: var(--void)
+}
+.light-mode .calendar-header h2 {
+    color: var(--text)
+}
 /* ------------------------------ CARDS -----------------------------*/
 
 #todo_list{
@@ -236,10 +275,14 @@ body {
 .todo_card {
     list-style: none;
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* push actions to bottom */
+    height: 100%;
 }
 
 .card {
-    background: #fff;
+    background: #b0b0b0;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -247,11 +290,18 @@ body {
     width: 300px;
     min-height: 400px;
     max-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    justify-self: center;
+    height: 100%;
+    background-color: #ccc;
+    border-radius: 10px;
 }
 
 .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 15px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 .card-header {
@@ -263,13 +313,13 @@ body {
 
 .card-header h3 {
     margin: 0;
-    font-size: 1.5rem;
-    color: #333;
+    font-size: large;
+    color: var(--void);
 }
 
 .card-header .category {
     font-size: 0.9rem;
-    color: #666;
+    color: var(--void);
     background: #e0e0e0;
     padding: 5px 10px;
     border-radius: 4px;
@@ -278,11 +328,13 @@ body {
 .card-body p {
     margin: 10px 0;
     font-size: 1rem;
-    color: #555;
+    color:var(--void);
 }
 
 .card-footer {
-    display: flexbox;
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
     justify-self: center;
     gap: 20px;
 }
@@ -294,6 +346,7 @@ body {
     border-radius: 4px;
     cursor: pointer;
     transition: background 0.2s ease;
+    
 }
 
 .done_btn {
@@ -303,7 +356,7 @@ body {
     border-radius: 6px;
     cursor: pointer;
     transition: background 0.2s ease;
-    color: #fff;
+    color: var(--void);
 }
 
 .done_btn.pending {
@@ -320,14 +373,14 @@ body {
 }
 .card-footer .edit_btn {
     background: #007bff;
-    color: #fff;
+    color: var(--void);
 }
 .card-footer .edit_btn:hover {
     background: #0056b3;
 }
 .card-footer .delete_btn {
     background: #dc3545;
-    color: #fff;
+    color: var(--void);
 }
 .card-footer .delete_btn:hover {
     background: #a71d2a;
@@ -364,8 +417,7 @@ body {
     padding: 10px 0 10px 0;
     margin: 10px 0;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    
+    border-radius: 5px; 
 }
 .modal button {
     width: 100%;
@@ -387,6 +439,187 @@ body {
     color: #000;
     text-decoration: none;
 }
+
+/* ---------------------------- RECAP ----------------------------*/
+.weather_widget {
+    width: 400px;
+    box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 30px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    border: #000000 5px solid;
+    border-radius: 8px;
+}
+.dashboard {
+    background-color: var(--deep-space);
+    border-radius: 10px;
+    padding: 25px;
+    box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 30px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    margin: 75px auto;
+    width: 100%;
+    max-width: 100%;
+    height: 725px;
+}
+#search-input, #calendar-filter, #resetButton {
+    width: 400px;
+    padding: 0.5em;
+    margin-bottom: 1em;
+    background-color: var(--void);
+    border: none;
+    padding: 20px 20px;
+    color: var(--text);
+    opacity: 0.8;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 15px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  }
+  
+  .recap-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
+    margin-bottom: 20px;
+
+  }
+  
+  .recap-card {
+    text-align: center;
+    border: 1px;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: var(--void);
+    width: 144px;
+    box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 15px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  }
+
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        height: 800px;
+        }
+        
+        .div1 { grid-area: 1 / 1 / 2 / 3; }
+        .div2 { grid-area: 1 / 3 / 2 / 4; }
+        .div3 { grid-area: 1 / 4 / 2 / 5; }
+        .div4 { grid-area: 1 / 5 / 2 / 6; }
+        .div5 { grid-area: 2 / 1 / 5 / 3; }
+        .div6 { grid-area: 5 / 1 / 7 / 3; }
+        .div7 { 
+            grid-area: 2 / 3 / 3 / 6; 
+            display: flex;
+            gap: 22px;
+        }
+        .div8 { grid-area: 3 / 3 / 6 / 6; }
+        .div9 { grid-area: 6 / 3 / 7 / 6; }
+
+    .stats-counters {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 2rem;
+        gap: 2rem;
+        flex-wrap: wrap;
+        text-align: center;
+      }
+      
+      .counter-box {
+        background-color: var(--void);
+        padding: 20px;
+        border-radius: 12px;
+        width: 200px;
+        height: 150px;
+        margin-bottom: 32px;
+        box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 15px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+      }
+      
+      .counter-box h3 {
+        color: var(--accent);
+        margin-bottom: 10px;
+      }
+      
+      .counter {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: var(--text);
+      }
+    .calendar-widget {
+        max-width: 400px;
+        max-height: 400px;
+        background-color: var(--void);
+        border-radius: 10px;
+        padding: 1rem;
+        color: var(--text);
+        font-family: 'Viga', sans-serif;
+        box-shadow: rgba(247, 247, 247, 0.519) 0px 0px 15px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    }
+    
+    .calendar-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+        
+    }
+    
+    .calendar-header h2 {
+        margin: 0;
+        font-size: 1.5rem;
+        color: var(--text)
+    }
+    
+    .calendar-header button {
+        background-color: var(--accent);
+        color: var(--text);
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    
+    .calendar-header button:hover {
+        background-color: var(--text);
+    }
+    
+    .calendar-days {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: 0.5rem;
+    }
+    
+    .day-name {
+        padding: 0.5rem 0;
+        background-color: var(--text);
+        color:var(--void);
+        border-radius: 5px;
+    }
+    
+    .calendar-dates {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        gap: 0.5rem;
+    }
+    
+    .calendar-dates .date {
+        padding: 0.5rem;
+        text-align: center;
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: var(--void);
+        color: var(--text);
+    }
+    
+    .calendar-dates .date:hover {
+        background-color: var(--accent);
+        color: var(--text);
+    }
+    
+    .calendar-dates .date.selected {
+        background-color: var(--accent);
+        color: var(--text);
+    }
+
 /* -------------------------- MEDIA-QUERIES -------------------------*/
 @media (max-width: 1920px) {
     .container {
@@ -428,7 +661,7 @@ body {
         row-gap: 0px;
     }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1125px) {
     .container {
         min-height: calc(100vh - 296.77px);
     }
@@ -459,6 +692,75 @@ body {
         column-gap: 30px;
         row-gap: 0px;
     }
+    .parent {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-row-gap: 20px;
+        height: auto;
+    }
+    .div1 {
+        grid-area: 2 / 1 / 2 / 3;
+        justify-self: center;
+        grid-column: span 1/3;
+        width: auto;
+    }
+    .div2 {
+        display: none;
+    }
+    .div3 {
+        grid-area: 1 / 1 / 1 / 3;
+        justify-self: center;
+        grid-column: span 1/3;
+        width: auto;
+    }
+    .div4 {
+        display: none;
+    }
+    .div5 {
+        grid-area: 5 / 1 / 5 / 3;
+        grid-column: span 1/3;
+        justify-self: center;
+        width: auto;
+    }
+    .div6 {
+        grid-area: 6 / 1 / 6 / 3;
+        justify-self: center;
+        grid-column: span 3;
+        max-width: 400px;
+        width: auto;
+    }
+    .div7 {
+        grid-area: 3 / 1 / 3 / 1;
+        grid-column: span 3;
+        justify-content: center;
+        width: auto;
+    }
+    .div8 {
+        grid-area: 4 / 1 / 4 / 3;
+        justify-self: center;
+        grid-column: span 1/3;
+        width: auto;
+    }
+    .div9 {
+        display: none;
+    }
+    .dashboard {
+        height: auto;
+    }
+    .todo_box {
+        height: auto;
+    }
+    .dashboard .counter-box {
+        margin: 0;
+    }
+    .recap-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 18px;
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+
 }
 @media (max-width: 768px) {
     .container {
@@ -491,6 +793,83 @@ body {
         column-gap: 30px;
         row-gap: 0px;
     }
+    .light-mode #dark_mode .dark_icon  {
+        display: inline;
+        max-width: 35px;
+    }
+    .dark-mode #dark_mode .light_icon  {
+        display: inline;
+        max-width: 35px;
+    }
+    #dark_mode .text {
+        display: none;
+      }
+    .dashboard {
+        height: auto;
+    }
+    .todo_box {
+        height: auto;
+    }
+    .parent {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-row-gap: 20px;
+        height: auto;
+    }
+    .div1 {
+        grid-area: 2 / 1 / 2 / 3;
+        justify-self: center;
+        grid-column: span 1/3;
+        width: auto;
+    }
+    .div2 {
+        display: none;
+    }
+    .div3 {
+        grid-area: 1 / 1 / 1 / 3;
+        justify-self: center;
+        grid-column: span 1/3;
+        width: auto;
+    }
+    .div4 {
+        display: none;
+    }
+    .div5 {
+        grid-area: 5 / 1 / 5 / 3;
+        grid-column: span 1/3;
+        justify-self: center;
+        width: auto;
+    }
+    .div6 {
+        grid-area: 6 / 1 / 6 / 3;
+        justify-self: center;
+        grid-column: span 3;
+        max-width: 400px;
+        width: auto;
+    }
+    .div7 {
+        grid-area: 3 / 1 / 3 / 1;
+        grid-column: span 3;
+        justify-content: center;
+        width: auto;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 18px;
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+    .div8 {
+        grid-area: 4 / 1 / 4 / 3;
+        justify-self: center;
+        grid-column: span 3;
+        width: auto;
+    }
+    .div9 {
+        grid-area: 3 / 3 / 3 / 3;
+        justify-self: left;
+        width: auto;
+    }
+    
 }
 @media (max-width: 450px) {
     .container {
@@ -499,14 +878,21 @@ body {
     .navbar {
         flex-direction: column;
         align-items: center;
+        
     }
     .navbar .nav-icons a {
         margin-top: 10px;
         font-size: small;
         padding: 0px;
     }
+    .navbar #dark_mode:hover {
+        background-color: rgba(255, 255, 255, 0);
+    }
     .navbar p {
         display: none;
+    }
+    .navbar .logo {
+        margin-right: 35px;
     }
     .todo_box {
         margin-top: 70px;
@@ -536,4 +922,92 @@ body {
       .footer_container {
         font-size: x-small;
       }
+      .dashboard {
+        height: auto;
+        margin: 0 auto;
+    }
+    .todo_box {
+        height: auto;
+    }
+    .div1 {
+        display: none;
+    }
+    .div8{
+        grid-area: 4 / 1 / 4 / 3;
+        justify-self: center;
+        grid-column: span 3;
+        width: auto;
+    }
+    .dashboard #search-input, #calendar-filter, #resetButton {
+        width: 320px;
+    }
+    .div6 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;;
+    }
+    .calendar-widget {
+        width: 320px;
+    }
+}
+@media (max-width: 400px) {
+    .calendar-widget {
+        width: 290px;
+    }
+    .calendar-dates {
+        gap: 0;
+    }
+    .calendar-header {
+        width: 260px;
+    }
+    .dashboard #search-input, #calendar-filter, #resetButton {
+        width: 260px;
+    }
+    .todo_box {
+        height: auto;
+    }
+}
+@media (max-width: 360px) {
+    .calendar-widget {
+        width: 250px;
+    }
+    .calendar-dates .date{
+        padding: 0;
+        margin: 0;
+    }
+    .calendar-header {
+        width: 220px;
+    }
+    .dashboard #search-input, #calendar-filter, #resetButton {
+        width: 220px;
+    }
+    .todo_box {
+        height: auto;
+    }
+    .navbar .logo {
+        margin-right: 35px;
+        font-size: x-large;
+    }
+}
+@media (max-width: 320px) {
+    .calendar-widget {
+        width: 230px;
+    }
+    .calendar-dates .date{
+        padding: 0;
+        margin: 0;
+    }
+    .calendar-header {
+        width: 200px;
+    }
+    .dashboard #search-input, #calendar-filter, #resetButton {
+        width: 200px;
+    }
+    .todo_box {
+        height: auto;
+    }
+    .navbar .logo {
+        margin-right: 35px;
+        font-size: x-large;
+    }
 }
